# vteg

./: .gitignore  BreezeThemes.cmake  CMakeLists.txt  CustomVideoSlider.cpp  CustomVideoSlider.h  Readme.md  SettingsWindow.cpp  SettingsWindow.h  TagManager.cpp  TagManager.h  VideoPreview.cpp  VideoTag.cpp  VideoTag.h  VideoTagCategory.cpp  VideoTagCategory.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tut.txt  videowidget.cpp  videowidget.h  videowidgetsurface.cpp  videowidgetsurface.h
OD/: ssd_mobilenet_v2_coco_2018_03_29.pbtxt.txt
Utilities/: CustomVideoSlider.h  FrameGrabber.cpp  FrameGrabber.h  HotKeyManager.h  HotkeyManager.h  ObjectDetector.cpp  ObjectDetector.h  Settings.cpp  Settings.h  TensorflowObjectDetection.cpp  TensorflowObjectDetection.h  VideoPreview.cpp  VideoPreview.h  VideoTag.cpp  VideoTag.h  VideoTagCategory.cpp  VideoTagCategory.h
VTEg/: mainwindow.cpp
Windows/: SettingsWidget.cpp  SettingsWidget.h  SettingsWindow.cpp  SettingsWindow.h  TagManager.cpp  TagManager.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  videowidget.cpp  videowidget.h  videowidgetsurface.cpp  videowidgetsurface.h
libraries/: csv.h
libraries/QtFFmpegWrapper/: QTFFmpegX64_2015.vcxproj
libraries/QtFFmpegWrapper/libavcodec/: avcodec.h  version.h
libraries/QtFFmpegWrapper/libavformat/: avformat.h  avio.h  version.h
libraries/QtFFmpegWrapper/libavutil/: common.h  pixfmt.h
ui/: TagManager.cpp  TagManager.h  TagManager.ui  ui_TagManager.h  ui_mainwindow.h
